fixes alignment issues for guide side navigation
see: https://twitter.com/tomdale/status/290280704565182465

:trollface:

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -781,9 +781,7 @@ $content-width: $page-width - $sidebar-width - $col-spacing * 2;
           }
 
           li.sub-selected {
-            padding-top: 6px;
             background-color: #fcc;
-            margin-bottom: 3px;
           }
         }
 
